# plane-nerf

./: .gitignore  Dockerfile  model.txt  pyproject.toml
diagnostic/: add_mask_path.ipynb  get_frame.ipynb  get_test_frame.ipynb  loss_debug.ipynb  overlay_background.ipynb  pixel_level_debug.ipynb  see_spins.ipynb
eval/: compare_origin_with_mask.ipynb
inerf/: inerf.ipynb  inerf_nerfstudio.ipynb
method_template/: plane_nerf_config.py  plane_nerf_field.py  plane_nerf_model.py
paper/: draw_origin.ipynb  inerf_training.ipynb  process_pose_data_2_tag.ipynb  process_pose_data_logo.ipynb  render_video.ipynb
plane_nerf/: inerf_trainer.py  inerf_utils.py  plane_nerf_config.py  plane_nerf_datamanager.py  plane_nerf_field.py  plane_nerf_model.py  plane_nerf_optimizer.py  plane_nerf_pipeline.py  plane_nerf_utils.py  template_pipeline.py
utils/: compare_origin_with_mask.ipynb  evaluation.ipynb  evaluation_pose.ipynb  evaluation_pose_iterate.py  evaluation_pose_iterate_through_transform.ipynb  evaluation_pose_v2.ipynb  evaluation_pose_v3.ipynb  evaluation_pose_video.ipynb  examine_sampled_pixels.ipynb  find_cross_correlation.ipynb  find_footprint.ipynb  get_frame.ipynb  get_image_with_mask.ipynb  get_masked_footprint.ipynb  get_psnr.ipynb  get_rendered_image_footprint_dataset.ipynb  get_video.ipynb  load_info.ipynb  loss_debug.ipynb  overlay_render_background.ipynb  pixel_level_debug.ipynb  process_metric_csv.ipynb  process_metric_csv_sparse.ipynb  process_pose_data.ipynb  process_pose_data_2_default_loss.ipynb  process_pose_data_2_layer.ipynb  process_pose_data_logo.ipynb  (+2 more)
(+12 files in other folders)
