[project]
name = "plane-nerf"
description = "New methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["plane_nerf*"]

[project.entry-points.'nerfstudio.method_configs']
plane_nerf = 'plane_nerf.plane_nerf_config:plane_nerf_method'
